--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -14,15 +12,6 @@
     <!-- my style -->
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Interactive rating component</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <!-- rating card -->
@@ -30,7 +19,7 @@
       <!-- card container -->
       <main>
         <div class="star-logo">
-          <img src="icons/icon-star.svg" alt="" />
+          <img src="images/icon-star.svg" alt="" />
         </div>
         <!-- card header -->
         <h2 class="title">How did we do ?</h2>
@@ -55,7 +44,7 @@
     <div class="result-card card-visible">
       <div class="content">
         <div class="thankyou-logo">
-          <img src="icons/illustration-thank-you.svg" alt="" />
+          <img src="images/illustration-thank-you.svg" alt="" />
         </div>
         <!-- result content -->
         <p class="rating-result">
@@ -73,12 +62,17 @@
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        class="link"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a href="https://twitter.com/belalBahaa66" target="_blank"
-        >Your Name Here</a
+      <a class="link" href="https://twitter.com/belalBahaa66" target="_blank"
+        >Belal Bahaa</a
       >.
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
