accessibily issues fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="images/icon-star.svg" alt="" />
         </div>
         <!-- card header -->
-        <h2 class="title">How did we do ?</h2>
+        <h1 class="title">How did we do ?</h1>
         <p>
           Please let us know how we did with your support request. All feedback
           is appreciated to help us improve our offering!
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a
         class="link"
@@ -71,7 +71,7 @@
       <a class="link" href="https://twitter.com/belalBahaa66" target="_blank"
         >Belal Bahaa</a
       >.
-    </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
